Minor Fix to center icons on mobile view

--- a/styles.css
+++ b/styles.css
@@ -413,11 +413,13 @@ a.dark-mode:visited {
   }
 
   .socials {
-    width:80%;
+    width: 80%;
     justify-content: space-around;
   }
 
   .social {
+    align-items: center;
+    justify-content: center;
     font-size: 3rem;
   }
 }
